Fixed impact stories layout bug

--- a/resources/scss/_global/_mixins.scss
+++ b/resources/scss/_global/_mixins.scss
@@ -280,6 +280,10 @@
 		@include last;
 	}
 
+	&:nth-of-type(#{$context / $col}n+1) {
+		clear: both;
+	}
+
  }
 
 
